Fix layout-wrapper sizing
Having a vertical scroll bar does not decrease viewport width. If an
element is set to '100vw', it stretches into the space the scrollbar
is using, causing content to be clipped by the scrollbar. Setting
layout-wrapper's min-width to '100%' instead of '100vw' fixes the issue.

--- a/style.css
+++ b/style.css
@@ -67,7 +67,7 @@
 }
 
 .layout-wrapper {
-    min-width: 100vw;
+    min-width: 100%;
     min-height: 100vh;
     display: grid;
     grid-template-columns: 275px 1fr;
